fix(cors): allow www.elog.click and *.elog.click origins